--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.62.2",
     "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^5.0.0",
+    "react-native-google-places-autocomplete": "^1.7.2",
     "react-native-maps": "^0.27.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
