--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/drawer": "^5.8.4",
+    "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^5.0.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-google-places-autocomplete": "^1.7.2",
     "react-native-maps": "^0.27.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
