--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('savor_app_key.keystore')
+            storePassword 'savorapp'
+            keyAlias 'savor_app_key_alias'
+            keyPassword 'savorapp'
+        }
     }
     buildTypes {
         debug {
@@ -161,6 +167,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
+
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
